added comments to index.html file

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,17 @@
     name="description"
     content="Web site created using create-react-app"
    />
+   <!--change-->
    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!--add here 2-->
+
+    <!--add one here-->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600&display=swap" rel="stylesheet"> <!--choose-->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
