added code to 'about', 'footer', 'header',  'navtabs' file; transferred design from previous portfolio assignment

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,12 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!--add here 2-->
+    <!--Favicons-->
+    <link href="assets/img/cropped-s-favicon.png" rel="icon">
 
-    <!--add one here-->
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600&display=swap" rel="stylesheet"> <!--choose-->
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
