--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,21 @@
     name="description"
     content="Web site created using create-react-app"
    />
-   <!--change-->
-   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
+
+   <link href="%PUBLIC_URL%/src/img/cropped-s-favicon.png" rel="icon">
+
+   <!--Vendor CSS Files-->
+   <link href="public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+   <link href="public/vendor/icofont/icofont.min.css" rel="stylesheet">
+   <link href="public/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+   <link href="public/vendor/venobox/venobox.css" rel="stylesheet">
+   <link href="public/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+   <link href="public/vendor/aos/aos.css" rel="stylesheet">
+
+    <!-- Template Main CSS File -->
+  <link href="component/styles/style.css" rel="stylesheet">
+
+   
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -18,7 +31,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!--Favicons-->
-    <link href="assets/img/cropped-s-favicon.png" rel="icon">
+ 
 
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -37,6 +50,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -47,5 +62,23 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
+    <div id="preloader"></div> -->
+  
+    <!-- Vendor JS Files -->
+    <script src="public/vendor/jquery/jquery.min.js"></script>
+    <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="public/vendor/jquery.easing/jquery.easing.min.js"></script>
+    <script src="public/vendor/php-email-form/validate.js"></script>
+    <script src="public/vendor/waypoints/jquery.waypoints.min.js"></script>
+    <script src="public/vendor/counterup/counterup.min.js"></script>
+    <script src="public/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="public/vendor/venobox/venobox.min.js"></script>
+    <script src="public/vendor/owl.carousel/owl.carousel.min.js"></script>
+    <script src="public/vendor/typed.js/typed.min.js"></script>
+    <script src="public/vendor/aos/aos.js"></script>
+  
+    <!-- Template Main JS File -->
+    <script src="public/js/main.js"></script>
   </body>
 </html>
