added to 'about', 'contact', 'portfolio', 'resume', 'footer', 'header', 'index.html' and installed npm package for icons

--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,10 @@
     content="Web site created using create-react-app"
    />
 
-   <link href="%PUBLIC_URL%/src/img/cropped-s-favicon.png" rel="icon">
+   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
    <!--Vendor CSS Files-->
-   <link href="public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-   <link href="public/vendor/icofont/icofont.min.css" rel="stylesheet">
-   <link href="public/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-   <link href="public/vendor/venobox/venobox.css" rel="stylesheet">
-   <link href="public/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-   <link href="public/vendor/aos/aos.css" rel="stylesheet">
 
-    <!-- Template Main CSS File -->
-  <link href="component/styles/style.css" rel="stylesheet">
 
    
     <!--
@@ -31,7 +23,13 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!--Favicons-->
- 
+  <link href="src/img/cropped-s-favicon.png" rel="icon" />
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!--Font Awesome icons-->
+  <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+
 
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -50,7 +48,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
 
     <!--
       This HTML file is a template.
