--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,8 @@
 
    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-   <!--Vendor CSS Files-->
-
-
+   <!--Icofont-->
+   <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css">
    
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -59,24 +58,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <!-- <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
-    <div id="preloader"></div> -->
-  
-    <!-- Vendor JS Files -->
-    <script src="public/vendor/jquery/jquery.min.js"></script>
-    <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="public/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="public/vendor/php-email-form/validate.js"></script>
-    <script src="public/vendor/waypoints/jquery.waypoints.min.js"></script>
-    <script src="public/vendor/counterup/counterup.min.js"></script>
-    <script src="public/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="public/vendor/venobox/venobox.min.js"></script>
-    <script src="public/vendor/owl.carousel/owl.carousel.min.js"></script>
-    <script src="public/vendor/typed.js/typed.min.js"></script>
-    <script src="public/vendor/aos/aos.js"></script>
-
-  
-    <!-- Template Main JS File -->
-    <script src="public/js/main.js"></script>
+    
+ 
   </body>
 </html>
